[package]
name = "rustgems"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "licactlib"
path = "src/lib.rs"
doctest = false

[dependencies]
tokio = { version = "1.40", default-features= false, features = ["macros", "rt-multi-thread" ] }
unicode-segmentation = "1"

[profile.release]
# debug = true      # Enable debug symbols
strip = true        # Strip symbols from binary
lto = true          # Enable link-time optimization
codegen-units = 64  # Improve compile time
panic = 'abort'
opt-level = 1       # Basic optimizations, improved compile time
incremental = true  # shorten hot local builds duration
